# adrena-arena

./: .env.example  .gitignore  Anchor.toml  DESIGN.md  README.md  package.json  pnpm-workspace.yaml
app/: index.html  package.json  tailwind.config.js  vite.config.ts
app/src/: index.css  main.tsx
app/src/components/: BracketVisualizer.tsx  Layout.tsx  LeaderboardTable.tsx  TierBadge.tsx  WalletProvider.tsx
app/src/pages/: Agents.tsx  Dashboard.tsx  Leagues.tsx  Profile.tsx  Tournaments.tsx
docs/: TESTING_REPORT.md
programs/adrena-arena/: Cargo.toml
programs/adrena-arena/src/: constants.rs  errors.rs  lib.rs
programs/adrena-arena/src/instructions/: agent_staking.rs  anti_gaming.rs  initialize_competition.rs  mod.rs  promote_relegate.rs  register_agent.rs  register_player.rs  squad.rs  tournament.rs  update_player_stats.rs
programs/adrena-arena/src/state/: agent.rs  competition.rs  mod.rs  player.rs  squad.rs  tournament.rs
sdk/: package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  index.ts  pda.ts
sdk/src/types/: index.ts
services/ai-agent-registry/: package.json
services/anti-gaming/: package.json
services/anti-gaming/src/: index.ts
services/anti-gaming/src/detectors/: collusion.ts  sybil.ts  wash-trade.ts
services/competition-engine/: package.json  tsconfig.json
services/competition-engine/prisma/: schema.prisma
services/competition-engine/src/: index.ts
services/competition-engine/src/crank/: weekly.ts
services/competition-engine/src/leaderboard/: redis.ts
services/competition-engine/src/scoring/: agent.ts  index.ts  (+2 more)
