[package]
name = "adrena-arena"
version = "0.1.0"
description = "Trading competition module for Adrena Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "adrena_arena"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

[dev-dependencies]
